# 
# Copyright 2023, [object Object]
# Licensed under MIT
#

[package]
name = "wurl"
version = "0.1.1"
edition = "2021"
authors = ["<object Object> whaledev.contact@gmail.com"]
description = "A simple CLI tool to download files from the web."
license = "MIT"
repository = "https://github.com/0bject-0bject/wurl"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
clap = "4.3.19"
tui-tools = "0.1.2"